# vscp-daemon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
_CPack_Packages/Linux/DEB/: vscpd_15.0.3_amd64.deb
_CPack_Packages/Linux/DEB/vscpd-15.0.3-Linux-x86_64/: control  md5sums
_CPack_Packages/Linux/DEB/vscpd-15.0.3-Linux-x86_64/usr/sbin/: vscpd
_CPack_Packages/Linux/TGZ/vscpd-15.0.3-Linux-x86_64/share/doc/vscpd/: README.md
_CPack_Packages/Linux/TGZ/vscpd-15.0.3-Linux-x86_64/share/man/man8/: vscpd.8
docs/: history.md  index.html  introduction.md  variables.xml
man/: CMakeLists.txt
